--- a/resources.html
+++ b/resources.html
@@ -543,6 +543,68 @@
       </div>
     </div>
   </section>
+
+<!-- =========================
+  Step 7 — Resource Index + Related Paths
+========================= -->
+<section class="panel" id="resource-index" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Step 7 — แผนที่ทรัพยากร (เลือกให้พอดีกับวันนี้)</h2>
+    <div class="resTag">Mini index • Next steps • Related services</div>
+  </div>
+
+  <div class="resBody">
+    <div class="resBox">
+      <p class="small" style="margin-top:0;">
+        ถ้าคุณไม่แน่ใจว่าจะเริ่มจากอะไร ให้เลือก “ตามอาการ” แล้วทำให้จบ 1 ชิ้นก่อน
+        จากนั้นค่อยเพิ่มอย่างเป็นลำดับ
+      </p>
+
+      <div class="grid2" style="margin-top:12px;">
+
+        <a class="card cardLink" href="#quickstart" aria-label="ไปที่ Quick Start">
+          <div class="kicker">A) Quick Start</div>
+          <h3>เริ่มทันที (60 วินาที–10 นาที)</h3>
+          <p>เหมาะสำหรับวันที่ใจล้า / หลุดศูนย์ / อยากรีเซ็ตเร็วแบบไม่ฝืน</p>
+        </a>
+
+        <a class="card cardLink" href="#breath" aria-label="ไปที่หมวดลมหายใจและความนิ่ง">
+          <div class="kicker">B) Breath & Stillness</div>
+          <h3>ลมหายใจ & ความนิ่ง</h3>
+          <p>เหมาะสำหรับวันที่ต้องการความนิ่งลึกขึ้น และทำซ้ำได้ทุกวัน</p>
+        </a>
+
+        <a class="card cardLink" href="#journal" aria-label="ไปที่หมวดคำถามนำทางหัวใจ">
+          <div class="kicker">C) Journal</div>
+          <h3>คำถามนำทางหัวใจ</h3>
+          <p>เหมาะสำหรับวันที่ใจแน่น/สับสน และต้องการ “ฟังตัวเอง” ให้ชัดขึ้น</p>
+        </a>
+
+        <a class="card cardLink" href="#notes" aria-label="ไปที่หมวดโน้ตการฝึก">
+          <div class="kicker">D) Practice Notes</div>
+          <h3>โน้ตการฝึก & วิธีทำให้ทำซ้ำได้</h3>
+          <p>เหมาะสำหรับคนที่อยาก “จัดระบบการฝึก” ให้ยืนพื้นและต่อเนื่อง</p>
+        </a>
+
+      </div>
+
+      <div class="subPanel" style="margin-top:14px;">
+        <h3 style="margin:0;">ถ้าอยากให้มี “คนช่วยจัดลำดับ”</h3>
+        <p class="small" style="margin-top:8px;">
+          ถ้าคุณอยากให้ฉันช่วยเลือกเครื่องมือให้ตรงกับจังหวะของคุณ
+          หรืออยากได้พื้นที่รับฟังที่ชัดและปลอดภัย — ใช้ทางลัดตรงนี้ได้เลย
+        </p>
+
+        <div class="ctaRow" style="margin-top:12px;">
+          <a class="btn primary" href="service-20min.html">ไปที่บริการ 20 นาที</a>
+          <a class="btn" href="services.html">ดูหน้าบริการทั้งหมด</a>
+          <a class="btn" href="certification.html">ดูโปรแกรม 8–12 เดือน</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
   
   <!-- =========================
     Step 3 — CTA Panel
