--- a/resources.html
+++ b/resources.html
@@ -317,7 +317,7 @@
  <!-- =========================
     Step 4 — FOUNDATIONS (Educational Pages)
   ========================= -->
-  <section class="panel" style="margin-top:16px;">
+  <section class="panel"id="breath" style="margin-top:16px;">
     <div class="resHead">
       <h2>Foundations — พื้นฐานที่ควรรู้ (อ่านง่าย • ใช้ได้จริง)</h2>
       <div class="resTag">Basics • Nervous system • Practice first</div>
@@ -392,7 +392,7 @@
  <!-- =========================
     Step 5 — RECOMMENDED PATHS (Choose your starting point)
   ========================= -->
-  <section class="panel" style="margin-top:16px;">
+  <section class="panel"id="journal" style="margin-top:16px;">
     <div class="resHead">
       <h2>Recommended Paths — เลือกเส้นทางเริ่มต้นตาม “สถานะใจ”</h2>
       <div class="resTag">Pick 1 • Do it fully • Repeatable</div>
@@ -482,7 +482,7 @@
   <!-- =========================
     Step 6 — SAFE USE + DISCLAIMER
   ========================= -->
-  <section class="panel" style="margin-top:16px;">
+  <section class="panel"id="notes" style="margin-top:16px;">
     <div class="resHead">
       <h2>Safe Use — ใช้อย่างปลอดภัย และไม่กดดันตัวเอง</h2>
       <div class="resTag">Gentle • Grounded • Clear</div>
