--- a/resources.html
+++ b/resources.html
@@ -168,7 +168,7 @@
  <!-- =========================
     Step 2 — BREATH & STILLNESS GUIDES (Library)
   ========================= -->
-  <section class="panel" style="margin-top:16px;">
+  <section class="panel"id="quickstart" style="margin-top:16px;">
     <div class="resHead">
       <h2>Breath & Stillness Guides — ห้องเครื่องมือ (พื้นฐาน)</h2>
       <div class="resTag">Library • Step-by-step • Repeatable</div>
