--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
     <div class="heroGrid">
       <div class="heroText">
         <div class="goldline">About • เกี่ยวกับ <strong>KRUNIKI</strong></div>
-        <h1>KRUNIKI System</h1>
+        <h1>KRUNIKI SoulSync System™</h1>
         <p class="lead">
-          KRUNIKI System คือระบบการเรียนรู้และการปฏิบัติ
+          KRUNIKI SoulSync System™ คือระบบการเรียนรู้และการปฏิบัติ
           ที่ออกแบบมาเพื่อพาไปสู่ศูนย์กลางภายในของแต่ละบุคคลอย่างเป็นลำดับ
         </p>
 
