--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     <div class="grid2">
       <div class="card">
         <div class="kicker">System Identity</div>
-        <h3>KRUNIKI</h3>
+        <h3>KRUNIKI SoulSync System™/h3>
         <p>ชื่อของระบบการเรียนรู้และการปฏิบัติ ใช้เป็นชื่อเฉพาะ ไม่ต้องแปล ไม่ต้องขยายเกินจริง</p>
       </div>
 
