--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>KRUNIKI Academy — About</title>
-  <meta name="description" content="About KRUNIKI — Learning and Practice System" />
+  <title>About — KRUNIKI (ครูนิกี้)</title>
+  <meta name="description" content="About KRUNIKI • ครูนิกี้ • KRUNIKI SoulSync System™ — เส้นทางเยียวยาภายในด้วยสติ ความนิ่ง และการปฏิบัติที่ทำซ้ำได้" />
   <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -18,9 +18,9 @@
     </div>
 
     <nav aria-label="เมนูหลัก">
-      <a href="about.html" aria-current="page">About</a>
+      <a href="index.html#about">เกี่ยวกับ</a>
       <a href="services.html">บริการ</a>
-      <a href="index.html#resources">Resources</a>
+      <a href="resources.html">Resources</a>
       <a href="index.html#contact">ติดต่อ</a>
     </nav>
 
@@ -31,14 +31,30 @@
             <path class="fill" d="M12 3C6.5 3 2 6.7 2 11.3c0 2.8 1.7 5.3 4.3 6.9-.1.8-.5 2.7-.5 2.9 0 .3.2.5.5.4.2 0 2.2-1.3 3.3-2 1.1.3 2.2.4 3.4.4 5.5 0 10-3.7 10-8.3S17.5 3 12 3z"/>
           </svg>
         </a>
+
         <a class="iconbtn" href="https://www.facebook.com/kruniki/" target="_blank" rel="noopener" aria-label="Facebook">
           <svg viewBox="0 0 24 24" aria-hidden="true">
             <path class="fill" d="M14 8.7V7.3c0-.8.5-1 1.1-1h1V4h-1.8C12.3 4 11 5.3 11 7.2v1.5H9v2.7h2V20h3v-8.6h2.1l.4-2.7H14z"/>
           </svg>
         </a>
+
         <a class="iconbtn" href="https://www.youtube.com/@kruniki" target="_blank" rel="noopener" aria-label="YouTube">
           <svg viewBox="0 0 24 24" aria-hidden="true">
             <path class="fill" d="M21.6 7.2a2.7 2.7 0 0 0-1.9-1.9C18 4.9 12 4.9 12 4.9s-6 0-7.7.4A2.7 2.7 0 0 0 2.4 7.2 28.4 28.4 0 0 0 2 12a28.4 28.4 0 0 0 .4 4.8 2.7 2.7 0 0 0 1.9 1.9C6 19.1 12 19.1 12 19.1s6 0 7.7-.4a2.7 2.7 0 0 0 1.9-1.9A28.4 28.4 0 0 0 22 12a28.4 28.4 0 0 0-.4-4.8ZM10.2 15.2V8.8L15.8 12l-5.6 3.2Z"/>
+          </svg>
+        </a>
+
+        <a class="iconbtn" href="https://www.tiktok.com/@kruniki.official" target="_blank" rel="noopener" aria-label="TikTok">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="fill" d="M15 3c.3 2.5 1.7 4.1 4 4.3v3.1c-1.6.1-3-.4-4-1.1v6.5c0 3-2.4 5.2-5.4 5.2S4.2 19 4.2 16s2.4-5.3 5.4-5.3c.5 0 .9.1 1.3.2v3.3c-.4-.2-.8-.3-1.3-.3-1.2 0-2.2 1-2.2 2.2 0 1.2 1 2.2 2.2 2.2 1.4 0 2.4-1 2.4-2.8V3h3Z"/>
+          </svg>
+        </a>
+
+        <a class="iconbtn" href="https://www.instagram.com/kruniki.official/" target="_blank" rel="noopener" aria-label="Instagram">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="stroke" d="M7 3h10a4 4 0 0 1 4 4v10a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4Z" fill="none" stroke-width="2"/>
+            <path class="stroke" d="M12 11a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" fill="none" stroke-width="2"/>
+            <circle class="fill" cx="17.5" cy="6.5" r="1.1"/>
           </svg>
         </a>
       </div>
@@ -48,68 +64,121 @@
 
 <main class="wrap">
 
+  <!-- =========================
+    ABOUT — HERO
+  ========================= -->
   <section class="panel hero">
     <div class="heroGrid">
+
       <div class="heroText">
-        <div class="goldline">About • เกี่ยวกับ <strong>KRUNIKI</strong></div>
-        <h1>KRUNIKI SoulSync System™</h1>
+        <div class="goldline">About • ผู้พัฒนาแนวทาง <strong>KRUNIKI SoulSync System™</strong></div>
+        <h1>ครูนิกี้ (KRUNIKI)</h1>
+
         <p class="lead">
-          KRUNIKI SoulSync System™ คือระบบการเรียนรู้และการปฏิบัติ
-          ที่ออกแบบมาเพื่อพาไปสู่ศูนย์กลางภายในของแต่ละบุคคลอย่างเป็นลำดับ
+          KRUNIKI SoulSync System™<br>
+          แนวทางการเรียนรู้และเยียวยาภายในด้วยสติ<br>
+          เพื่อการหลอมรวมพลังจิต วิญญาณ และหัวใจ
         </p>
 
-        <div class="ctaRow">
-          <a class="btn primary" href="index.html#contact">ติดต่อ / นัดหมาย</a>
-          <a class="btn" href="index.html">กลับหน้า Home</a>
+        <div class="resBox" style="margin-top:12px;">
+          พัฒนาโดย “ครูนิกี้” ผู้สร้างแนวทาง KRUNIKI SoulSync System™<br>
+          และ KRUNIKI Healing System™ Certificate Program (8–12 เดือน)<br>
+          เส้นทางฟื้นคืนพลังรักแท้จากภายใน ผ่านการปลุกหัวใจ สมาธิ พลังงาน และจิตสำนึกใหม่
+        </div>
+
+        <div class="ctaRow" style="margin-top:14px;">
+          <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ทักคุยกับครูนิกี้ (LINE)</a>
+          <a class="btn" href="services.html">ดูบริการ</a>
+          <a class="btn" href="certification.html">ดูโปรแกรม 8–12 เดือน</a>
         </div>
       </div>
 
-      <div class="quoteCard" aria-label="About quote">
+      <div class="quoteCard" aria-label="About photo">
         <div class="quoteTop">
-          <div class="leftTitle">Core Direction</div>
-          <div style="opacity:.8;">Learning & Practice</div>
+          <div class="leftTitle">KRUNIKI</div>
+          <div style="opacity:.8;">soft • grounded • real</div>
         </div>
-        <p class="quote">
-          ระบบนี้ยืนพื้นด้วยการเรียนรู้ที่ชัดเจน และการปฏิบัติที่ทำได้จริง
-          โดยใช้สติ ความนิ่ง และการใช้ลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล
+
+        <img
+         <img src="kruniki-about-founder.webp"
+     alt="ครูนิกี้ — ผู้ก่อตั้ง KRUNIKI SoulSync System™">          alt="ภาพครูนิกี้ (KRUNIKI)"
+          style="width:100%; height:auto; border-radius:18px; display:block; margin-top:10px;"
+          loading="lazy"
+        />
+
+        <p class="quote" style="margin-top:12px;">
+          “ฉันไม่ได้สอนให้คุณเก่งขึ้นในภาพลักษณ์ —<br>
+          ฉันพาคุณกลับมารู้ตัวเป็นลำดับ จนยืนได้ด้วยหัวใจของคุณเอง”
         </p>
       </div>
+
+    </div>
+  </section>
+
+  <!-- =========================
+    SECTION — WHAT I DO
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>ฉันทำอะไรให้คุณได้</h2>
+      <div class="resTag">Support • Practice • Integration</div>
     </div>
 
-    <div class="subPanel" style="margin-top:16px;">
-      <h2>What you will find here</h2>
-      <p class="small">
-        หน้านี้สรุป “ความหมายของ KRUNIKI” แบบตรงไปตรงมา
-        เพื่อให้ผู้อ่านเข้าใจทิศทางของระบบ และเลือกเส้นทางที่เหมาะกับตนเอง
-      </p>
-    </div>
+    <div class="resBody">
+      <div class="grid2">
 
-    <div class="grid2">
-      <div class="card">
-        <div class="kicker">System Identity</div>
-        <h3>KRUNIKI /h3>
-        <p>ชื่อของระบบการเรียนรู้และการปฏิบัติ ใช้เป็นชื่อเฉพาะ ไม่ต้องแปล ไม่ต้องขยายเกินจริง</p>
-      </div>
+        <div class="card">
+          <div class="kicker">1) Heart Awakening</div>
+          <h3>ปลุกหัวใจให้กลับมารู้สึกอย่างปลอดภัย</h3>
+          <p>ไม่เร่ง ไม่ฝืน — แต่พากลับมา “อยู่กับตัวเองได้จริง” ผ่านสติ ความนิ่ง และการรับรู้ร่างกาย</p>
+        </div>
 
-      <div class="card">
-        <div class="kicker">Practice Core</div>
-        <h3>Mindfulness • Stillness • Breath</h3>
-        <p>ใช้สติ ความนิ่ง และการใช้ลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล</p>
-      </div>
+        <div class="card">
+          <div class="kicker">2) Stillness & Breath</div>
+          <h3>ใช้ความนิ่งและลมหายใจเป็น “เครื่องมือแกน”</h3>
+          <p>เพื่อปรับสมดุลระบบประสาท ลดการล้น และคืนศูนย์กลางภายในแบบทำซ้ำได้</p>
+        </div>
 
-      <div class="card">
-        <div class="kicker">Direction</div>
-        <h3>Guide back toward Inner Center</h3>
-        <p>ออกแบบการเรียนรู้และการปฏิบัติให้เป็นลำดับ เพื่อให้เกิดความชัดเจนต่อเนื่องในชีวิตจริง</p>
-      </div>
+        <div class="card">
+          <div class="kicker">3) Self-Healing System</div>
+          <h3>ทำให้การเยียวยา “เป็นระบบ”</h3>
+          <p>จากการเข้าใจ → การฝึก → การบูรณาการ → จนกลายเป็นทักษะชีวิต ไม่ใช่แรงบันดาลใจชั่วคราว</p>
+        </div>
 
-      <div class="card">
-        <div class="kicker">Learning Structure</div>
-        <h3>Sequential / Structured</h3>
-        <p>มีโครงสร้างที่ใช้งานซ้ำได้ และขยายต่อเป็นโปรแกรม/หลักสูตรได้โดยไม่หลุดทิศทาง</p>
+        <div class="card">
+          <div class="kicker">4) Gentle Guidance</div>
+          <h3>นำทางแบบอ่อนโยน แต่ชัด</h3>
+          <p>คุณจะไม่ถูกตัดสิน ไม่ถูกเร่ง และไม่ถูกทำให้รู้สึก “ต้องเก่งก่อนถึงจะเริ่มได้”</p>
+        </div>
+
       </div>
     </div>
+  </section>
 
+  <!-- =========================
+    SECTION — WHERE TO START
+  ========================= -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>เริ่มจากตรงไหนดีที่สุด?</h2>
+      <div class="resTag">Simple start</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        ถ้าคุณยังไม่แน่ใจว่า “ควรเริ่มจากอะไร” ให้เริ่มจากสิ่งที่เล็กและชัดก่อน:
+        <ul style="margin:10px 0 0 18px; line-height:1.9;">
+          <li><strong>อยากมีคนรับฟังแบบปลอดภัย:</strong> เริ่มที่ <a href="services.html">KRUNIKI Heart Awakening — 20 นาที</a></li>
+          <li><strong>อยากให้ฉันช่วยจัดทางฝึกเฉพาะคุณ:</strong> เริ่มที่ <a href="services.html">Private Guidance</a></li>
+          <li><strong>อยากเดินเป็นระบบระยะยาว:</strong> ดู <a href="certification.html">Healing System™ 8–12 เดือน</a></li>
+        </ul>
+
+        <div class="ctaRow" style="margin-top:12px;">
+          <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ทัก LINE แล้วบอก “จังหวะชีวิตตอนนี้”</a>
+          <a class="btn" href="resources.html">ไปหน้า Resources</a>
+        </div>
+      </div>
+    </div>
   </section>
 
 </main>
