--- a/about.html
+++ b/about.html
@@ -99,14 +99,15 @@
           <div style="opacity:.8;">soft • grounded • real</div>
         </div>
 
-        <img
-         <img src="kruniki-about-founder.webp"
-     alt="ครูนิกี้ — ผู้ก่อตั้ง KRUNIKI SoulSync System™">          alt="ภาพครูนิกี้ (KRUNIKI)"
-          style="width:100%; height:auto; border-radius:18px; display:block; margin-top:10px;"
-          loading="lazy"
-        />
+       <div class="aboutPhotoFrame">
+  <img
+    src="kruniki-about-founder.webp"
+    alt="ครูนิกี้ — ผู้ก่อตั้ง KRUNIKI SoulSync System™"
+    loading="lazy"
+  />
+</div>
 
-        <p class="quote" style="margin-top:12px;">
+ <p class="quote" style="margin-top:12px;">
           “ฉันไม่ได้สอนให้คุณเก่งขึ้นในภาพลักษณ์ —<br>
           ฉันพาคุณกลับมารู้ตัวเป็นลำดับ จนยืนได้ด้วยหัวใจของคุณเอง”
         </p>
