--- a/services.html
+++ b/services.html
@@ -1,5 +1,18 @@
+<section class="services-hero">
+  <h1>บริการเยียวยาหัวใจ<br>ภายใต้ KRUNIKI SoulSync System™</h1>
 
-      
+  <p class="services-sub">
+    เส้นทางฟื้นคืนพลังรักแท้จากภายใน  
+    ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ  
+    โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
+  </p>
+
+  <blockquote class="services-signature">
+    “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
+  </blockquote>
+</section>
+
+
     </div>
   </div>
 </section>
