--- a/services.html
+++ b/services.html
@@ -12,7 +12,53 @@
   </blockquote>
 </section>
 
- </div>
+<section class="services-list">
+
+  <div class="service-card">
+    <h3>KRUNIKI Heart Awakening — 20 Minutes Session</h3>
+    <p class="service-fit">
+      เหมาะสำหรับการเริ่มต้นอย่างเบา ๆ เมื่อใจล้า เหนื่อย หรือยังไม่พร้อมเล่าทุกอย่าง
+    </p>
+    <ul>
+      <li>รับฟังอย่างปลอดภัย ไม่ตัดสิน</li>
+      <li>พากลับมารับรู้ลมหายใจและหัวใจ</li>
+      <li>ความนิ่งเล็ก ๆ ที่ช่วยให้วันนั้นผ่านไปได้</li>
+    </ul>
+    <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank">เริ่มจากตรงนี้</a>
+  </div>
+
+  <div class="service-card">
+    <h3>Private Guidance — การดูแลเฉพาะตัว</h3>
+    <p class="service-fit">
+      สำหรับผู้ที่ต้องการพื้นที่ปลอดภัยและการดูแลแบบเฉพาะจังหวะชีวิตของตนเอง
+    </p>
+    <ul>
+      <li>การสะท้อนอย่างอ่อนโยนและตรงจุด</li>
+      <li>การฝึกที่ออกแบบตามจังหวะของคุณ</li>
+      <li>ความชัดขึ้นในตัวตนและการตัดสินใจ</li>
+    </ul>
+    <a class="btn" href="https://lin.ee/qdp20di" target="_blank">ขอคุยก่อน</a>
+  </div>
+
+  <div class="service-card">
+    <h3>KRUNIKI Healing System™ — Certification Program</h3>
+    <p class="service-fit">
+      เส้นทางหลัก 8–12 เดือน ภายใต้ KRUNIKI SoulSync System™
+      สำหรับการเยียวยาและการเติบโตระยะยาว
+    </p>
+    <ul>
+      <li>โครงสร้าง 8 Sessions แบบเป็นลำดับ</li>
+      <li>การบูรณาการหัวใจ ร่างกาย และจิตสำนึก</li>
+      <li>ฐานภายในที่มั่นคงและทำซ้ำได้</li>
+    </ul>
+    <a class="btn" href="certification.html">ดูโปรแกรมหลัก</a>
+  </div>
+
+</section>
+
+
+ 
+</div>
   </div>
 </section>
    
