--- a/services.html
+++ b/services.html
@@ -1,60 +1,137 @@
-<section class="services-hero">
-  <h1>บริการเยียวยาหัวใจ<br>ภายใต้ KRUNIKI SoulSync System™</h1>
+<!doctype html>
+<html lang="th">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>KRUNIKI Academy — Services</title>
+  <meta name="description" content="KRUNIKI — Services • Heart Awakening • Private Guidance • Programs" />
+  <link rel="stylesheet" href="assets/style.css">
+</head>
 
-  <p class="services-sub">
-    เส้นทางฟื้นคืนพลังรักแท้จากภายใน  
-    ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ  
-    โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
-  </p>
+<body>
 
-  <blockquote class="services-signature">
-    “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
-  </blockquote>
-</section>
+<header>
+  <div class="topbar">
+    <div class="brand" aria-label="KRUNIKI">
+      <span class="dot" aria-hidden="true"></span>
+      <span>K R U N I K I</span>
+    </div>
 
-<section class="services-list">
+    <nav aria-label="เมนูหลัก">
+      <a href="index.html#about">เกี่ยวกับ</a>
+      <a href="services.html" aria-current="page">บริการ</a>
+      <a href="index.html#resources">Resources</a>
+      <a href="index.html#contact">ติดต่อ</a>
+    </nav>
 
-  <div class="service-card">
-    <h3>KRUNIKI Heart Awakening — 20 Minutes Session</h3>
-    <p class="service-fit">
-      เหมาะสำหรับการเริ่มต้นอย่างเบา ๆ เมื่อใจล้า เหนื่อย หรือยังไม่พร้อมเล่าทุกอย่าง
-    </p>
-    <ul>
-      <li>รับฟังอย่างปลอดภัย ไม่ตัดสิน</li>
-      <li>พากลับมารับรู้ลมหายใจและหัวใจ</li>
-      <li>ความนิ่งเล็ก ๆ ที่ช่วยให้วันนั้นผ่านไปได้</li>
-    </ul>
-    <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank">เริ่มจากตรงนี้</a>
+    <div class="right">
+      <div class="social" aria-label="ช่องทางโซเชียลของ KRUNIKI">
+        <!-- LINE OA -->
+        <a class="iconbtn gold" href="https://lin.ee/qdp20di" target="_blank" rel="noopener" aria-label="LINE OA">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="fill" d="M12 3C6.5 3 2 6.7 2 11.3c0 2.8 1.7 5.3 4.3 6.9-.1.8-.5 2.7-.5 2.9 0 .3.2.5.5.4.2 0 2.2-1.3 3.3-2 1.1.3 2.2.4 3.4.4 5.5 0 10-3.7 10-8.3S17.5 3 12 3z"/>
+          </svg>
+        </a>
+
+        <!-- FACEBOOK -->
+        <a class="iconbtn" href="https://www.facebook.com/kruniki/" target="_blank" rel="noopener" aria-label="Facebook">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="fill" d="M14 8.7V7.3c0-.8.5-1 1.1-1h1V4h-1.8C12.3 4 11 5.3 11 7.2v1.5H9v2.7h2V20h3v-8.6h2.1l.4-2.7H14z"/>
+          </svg>
+        </a>
+
+        <!-- YOUTUBE -->
+        <a class="iconbtn" href="https://www.youtube.com/@kruniki" target="_blank" rel="noopener" aria-label="YouTube">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="fill" d="M21.6 7.2a2.7 2.7 0 0 0-1.9-1.9C18 4.9 12 4.9 12 4.9s-6 0-7.7.4A2.7 2.7 0 0 0 2.4 7.2 28.4 28.4 0 0 0 2 12a28.4 28.4 0 0 0 .4 4.8 2.7 2.7 0 0 0 1.9 1.9C6 19.1 12 19.1 12 19.1s6 0 7.7-.4a2.7 2.7 0 0 0 1.9-1.9A28.4 28.4 0 0 0 22 12a28.4 28.4 0 0 0-.4-4.8ZM10.2 15.2V8.8L15.8 12l-5.6 3.2Z"/>
+          </svg>
+        </a>
+
+        <!-- TIKTOK -->
+        <a class="iconbtn" href="https://www.tiktok.com/@kruniki.official" target="_blank" rel="noopener" aria-label="TikTok">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="fill" d="M15 3c.3 2.5 1.7 4.1 4 4.3v3.1c-1.6.1-3-.4-4-1.1v6.5c0 3-2.4 5.2-5.4 5.2S4.2 19 4.2 16s2.4-5.3 5.4-5.3c.5 0 .9.1 1.3.2v3.3c-.4-.2-.8-.3-1.3-.3-1.2 0-2.2 1-2.2 2.2 0 1.2 1 2.2 2.2 2.2 1.4 0 2.4-1 2.4-2.8V3h3Z"/>
+          </svg>
+        </a>
+
+        <!-- INSTAGRAM -->
+        <a class="iconbtn" href="https://www.instagram.com/kruniki.official/" target="_blank" rel="noopener" aria-label="Instagram">
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path class="stroke" d="M7 3h10a4 4 0 0 1 4 4v10a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4Z" fill="none" stroke-width="2"/>
+            <path class="stroke" d="M12 11a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z" fill="none" stroke-width="2"/>
+            <circle class="fill" cx="17.5" cy="6.5" r="1.1"/>
+          </svg>
+        </a>
+      </div>
+    </div>
   </div>
+</header>
 
-  <div class="service-card">
-    <h3>Private Guidance — การดูแลเฉพาะตัว</h3>
-    <p class="service-fit">
-      สำหรับผู้ที่ต้องการพื้นที่ปลอดภัยและการดูแลแบบเฉพาะจังหวะชีวิตของตนเอง
-    </p>
-    <ul>
-      <li>การสะท้อนอย่างอ่อนโยนและตรงจุด</li>
-      <li>การฝึกที่ออกแบบตามจังหวะของคุณ</li>
-      <li>ความชัดขึ้นในตัวตนและการตัดสินใจ</li>
-    </ul>
-    <a class="btn" href="https://lin.ee/qdp20di" target="_blank">ขอคุยก่อน</a>
-  </div>
+<main class="wrap">
 
-  <div class="service-card">
-    <h3>KRUNIKI Healing System™ — Certification Program</h3>
-    <p class="service-fit">
-      เส้นทางหลัก 8–12 เดือน ภายใต้ KRUNIKI SoulSync System™
-      สำหรับการเยียวยาและการเติบโตระยะยาว
-    </p>
-    <ul>
-      <li>โครงสร้าง 8 Sessions แบบเป็นลำดับ</li>
-      <li>การบูรณาการหัวใจ ร่างกาย และจิตสำนึก</li>
-      <li>ฐานภายในที่มั่นคงและทำซ้ำได้</li>
-    </ul>
-    <a class="btn" href="certification.html">ดูโปรแกรมหลัก</a>
-  </div>
+  <!-- Hero -->
+  <section class="panel">
+    <section class="services-hero">
+      <h1>บริการเยียวยาหัวใจ<br>ภายใต้ KRUNIKI SoulSync System™</h1>
 
-</section>
+      <p class="services-sub">
+        เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
+        ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ<br>
+        โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
+      </p>
 
+      <blockquote class="services-signature">
+        “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
+      </blockquote>
 
- 
+      <div class="ctaRow" style="justify-content:center; margin-top:18px;">
+        <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">เริ่มคุยกับครูนิกี้ (LINE)</a>
+        <a class="btn" href="index.html#contact">นัดหมาย</a>
+      </div>
+    </section>
+  </section>
+
+  <!-- Services list (Money area) -->
+  <section class="panel" style="margin-top:16px;">
+    <div class="resHead">
+      <h2>3 บริการหลัก (เลือกให้ตรงหัวใจตอนนี้)</h2>
+      <div class="resTag">Start • Continue • Deepen</div>
+    </div>
+
+    <div class="resBody">
+      <div class="grid2">
+        <a class="card cardLink" href="service-20min.html" aria-label="KRUNIKI Heart Awakening — 20 Minutes Session">
+          <div class="kicker">1) 20-Minute Session</div>
+          <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
+          <p>เหมาะสำหรับ “อยากเบาลงทันที” กลับสู่ baseline ของระบบประสาท และมีพื้นที่ปลอดภัยให้หัวใจได้หายใจ</p>
+        </a>
+
+        <a class="card cardLink" href="service-private.html" aria-label="KRUNIKI Private Guidance">
+          <div class="kicker">2) Private Guidance</div>
+          <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
+          <p>สำหรับคนที่อยากจัดระบบชีวิต-หัวใจแบบจริงจัง เป็นขั้น เป็นลำดับ และมีผู้ชี้ทางที่เข้าใจ</p>
+        </a>
+
+        <a class="card cardLink" href="service-programs.html" aria-label="Programs ภายใต้ KRUNIKI SoulSync System">
+          <div class="kicker">3) Programs</div>
+          <h3>Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
+          <p>เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”</p>
+        </a>
+
+        <a class="card cardLink" href="service-tools.html" aria-label="Tools & Practices">
+          <div class="kicker">Bonus</div>
+          <h3>Tools &amp; Practices — เครื่องมือดูแลหัวใจ</h3>
+          <p>สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง เพื่อความนิ่งและความมั่นคงภายใน</p>
+        </a>
+      </div>
+    </div>
+  </section>
+
+</main>
+
+<footer>
+  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+</footer>
+
+</body>
+</html>
