--- a/services.html
+++ b/services.html
@@ -127,6 +127,28 @@
     </div>
   </section>
 
+  <!-- ===== Bottom Booking CTA ===== -->
+<section class="panel">
+  <div class="bottomCta">
+    <div class="bottomCtaText">
+      <div class="kicker">Ready when you are</div>
+      <h2>ถ้าคุณรู้สึกว่า “อยากเริ่ม” — เริ่มจากก้าวที่เบาและปลอดภัยได้เลย</h2>
+      <p class="small">
+        คุณไม่ต้องพร้อมทุกอย่างในวันนี้ แค่เริ่มคุยก่อนก็พอ — แล้วเราค่อยเลือกบริการที่เหมาะกับหัวใจของคุณ
+      </p>
+    </div>
+
+    <div class="bottomCtaBtns">
+      <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">
+        เริ่มคุยใน LINE
+      </a>
+      <a class="btn" href="index.html#contact">
+        นัดหมาย / Contact
+      </a>
+    </div>
+  </div>
+</section>
+
 </main>
 
 <footer>
