--- a/services.html
+++ b/services.html
@@ -149,6 +149,82 @@
   </div>
 </section>
 
+  <!-- ===== Bottom CTA (2 columns + Mini FAQ) ===== -->
+<section class="panel">
+  <div class="salesCta">
+
+    <!-- Left: Offer + reassurance -->
+    <div class="salesLeft">
+      <div class="kicker">Next gentle step</div>
+      <h2>เริ่มจาก “จุดที่คุณอยู่จริง” แล้วค่อย ๆ กลับมาอยู่กับตัวเองอย่างเป็นระบบ</h2>
+
+      <p class="lead" style="margin-top:10px;">
+        ถ้าคุณไม่แน่ใจว่าควรเลือกบริการไหน — แค่ทักมาเล่า “สั้น ๆ” ก็พอ
+        ฉันจะช่วยคุณจัดลำดับให้เหมาะกับหัวใจและจังหวะชีวิตตอนนี้
+      </p>
+
+      <ul class="ctaBullets">
+        <li><strong>ไม่เร่ง</strong> ไม่กด ไม่บังคับให้ “ต้องดีขึ้น”</li>
+        <li><strong>ชัดเจน</strong> เลือกเส้นทางที่เหมาะที่สุดในตอนนี้</li>
+        <li><strong>ปลอดภัย</strong> เคารพพื้นที่ส่วนตัวและจังหวะของคุณ</li>
+      </ul>
+
+      <div class="ctaRow" style="margin-top:14px;">
+        <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">
+          เริ่มคุยใน LINE
+        </a>
+        <a class="btn" href="index.html#contact">
+          นัดหมาย / Contact
+        </a>
+      </div>
+
+      <p class="small" style="margin-top:10px; opacity:.75;">
+        * ถ้าคุณยังไม่พร้อม “จอง” คุณสามารถทักมาเพื่อถามก่อนอย่างเดียวได้เสมอ
+      </p>
+    </div>
+
+    <!-- Right: Mini FAQ -->
+    <aside class="salesRight" aria-label="Mini FAQ">
+      <div class="faqHead">
+        <div class="kicker">Mini FAQ</div>
+        <div class="resTag">ตอบสั้น ๆ เพื่อให้ตัดสินใจง่าย</div>
+      </div>
+
+      <div class="faqList">
+        <details class="faqItem">
+          <summary>ฉันควรเริ่มจากบริการไหน?</summary>
+          <div class="faqAns">
+            ถ้ารู้สึก “ล้า/แน่น/อยากเบาลงทันที” ให้เริ่มที่ <strong>Heart Awakening 20 นาที</strong><br>
+            ถ้าต้องการจัดระบบชีวิตและดูแลต่อเนื่อง ให้เลือก <strong>Private Guidance</strong><br>
+            ถ้าต้องการเส้นทางลึกแบบเป็นระบบระยะยาว ให้ดู <strong>Programs</strong>
+          </div>
+        </details>
+
+        <details class="faqItem">
+          <summary>ต้องเล่าทุกอย่างละเอียดไหม?</summary>
+          <div class="faqAns">
+            ไม่จำเป็นเลยค่ะ 😊 เล่าแค่ “หัวใจคุณหนักตรงไหน” และ “อยากได้อะไรจากการเริ่มครั้งนี้”
+            ก็พอ เราจะค่อย ๆ จัดลำดับและวางจังหวะให้เหมาะเอง
+          </div>
+        </details>
+
+        <details class="faqItem">
+          <summary>ถ้าฉันยังไม่พร้อมจ่าย/ยังไม่พร้อมเริ่ม?</summary>
+          <div class="faqAns">
+            คุณสามารถทักมาเพื่อถามก่อน หรือขอ “แนวทางเริ่มต้นเบา ๆ” ได้
+            แล้วค่อยเริ่มเมื่อพร้อม — ไม่ต้องเร่ง และไม่ต้องฝืน
+          </div>
+        </details>
+      </div>
+
+      <div class="faqFoot">
+        <a class="btn" href="services.html">ดูรายการบริการทั้งหมด</a>
+      </div>
+    </aside>
+
+  </div>
+</section>
+
 </main>
 
 <footer>
