--- a/services.html
+++ b/services.html
@@ -100,12 +100,30 @@
 
     <div class="resBody">
       <div class="grid2">
-        <a class="card cardLink" href="service-20min.html" aria-label="KRUNIKI Heart Awakening — 20 Minutes Session">
-          <div class="kicker">1) 20-Minute Session</div>
-          <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
-          <p>เหมาะสำหรับ “อยากเบาลงทันที” กลับสู่ baseline ของระบบประสาท และมีพื้นที่ปลอดภัยให้หัวใจได้หายใจ</p>
-        </a>
+        <a class="card cardLink featured" href="service-20min.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
+  <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
+  <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
 
+<p>
+  เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณ <strong>กลับสู่ baseline ของระบบประสาท</strong>
+  และมีพื้นที่ของหัวใจได้หายใจ<br>
+  โดยใช้หลักการ <strong>self-regulation</strong> เพื่อลดความตึงของระบบประสาท
+  และคืนความนิ่งให้การรับรู้  
+  เหมาะสำหรับวันที่ใจหนัก ล้า หรือ “หลุดจากตัวเอง” จนอยากกลับมาให้เร็วและปลอดภัย
+</p>
+
+<div class="miniBullets">
+    <span>• Regulation-focused</span>
+    <span>• Grounded & practical</span>
+    <span>• Clear next step</span>
+  </div>
+
+  <div class="microProof">
+    หลังจบ 20 นาที คนมักรู้สึกว่า “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”<br>
+<span style="opacity:.7;">(สอดคล้องกับหลักการ nervous system regulation)</span>
+ </div>
+</a>
         <a class="card cardLink" href="service-private.html" aria-label="KRUNIKI Private Guidance">
           <div class="kicker">2) Private Guidance</div>
           <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
