--- a/services.html
+++ b/services.html
@@ -127,14 +127,31 @@
         <a class="card cardLink" href="service-private.html" aria-label="KRUNIKI Private Guidance">
           <div class="kicker">2) Private Guidance</div>
           <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
-          <p>สำหรับคนที่อยากจัดระบบชีวิต-หัวใจแบบจริงจัง เป็นขั้น เป็นลำดับ และมีผู้ชี้ทางที่เข้าใจ</p>
-        </a>
+          <p>
+  การดูแลต่อเนื่องแบบส่วนตัว สำหรับคนที่ต้องการ “จัดระบบชีวิต–หัวใจ” อย่างเป็นลำดับ<br>
+  เราทำงานแบบมีโครงสร้าง: <strong>ประเมินจังหวะและ baseline</strong> → วางแผนการฝึกที่ทำได้จริง →
+  ติดตามผลและปรับให้เข้ากับชีวิตประจำวัน<br>
+  เหมาะกับผู้ที่อยากสร้างความมั่นคงภายในแบบระยะยาว
+  โดยยืนบน <strong>self-regulation</strong> (สติ • ความนิ่ง • ลมหายใจ) และขอบเขตที่ปลอดภัย
+</p>
+<div class="microProof">
+  สิ่งที่คนมักสังเกตได้เมื่อทำต่อเนื่อง: “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
+</div>
+</a>
 
         <a class="card cardLink" href="service-programs.html" aria-label="Programs ภายใต้ KRUNIKI SoulSync System">
           <div class="kicker">3) Programs</div>
           <h3>Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
-          <p>เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”</p>
-        </a>
+          <p>
+  <strong>เส้นทางหลัก (Main Path)</strong> ของ KRUNIKI สำหรับผู้ที่ต้องการการเปลี่ยนแปลงแบบเป็นระบบ<br>
+  Programs ถูกออกแบบเป็น <strong>Learning &amp; Practice</strong> ที่ค่อย ๆ ลึกขึ้นตามลำดับ
+  เพื่อให้ความนิ่งและความชัด “อยู่ได้จริง” ในชีวิตประจำวัน (ไม่ใช่คอร์สสั้นแบบจบแล้วหาย)<br>
+  เหมาะสำหรับผู้ที่พร้อมฝึกต่อเนื่อง และอยากมีกรอบการเรียนรู้ที่ <strong>ยืนพื้น ชัด และทำซ้ำได้</strong>
+</p>
+<div class="microProof">
+  คนที่เหมาะกับเส้นทางนี้มักกำลังมองหา: “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
+</div>
+</a>
 
         <a class="card cardLink" href="service-tools.html" aria-label="Tools & Practices">
           <div class="kicker">Bonus</div>
