--- a/services.html
+++ b/services.html
@@ -260,6 +260,86 @@
   </div>
 </section>
 
+<!-- =========================
+  Bottom CTA (2 Columns) + Mini FAQ
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>อยากเริ่มแบบไหน…ให้พอดีกับใจตอนนี้?</h2>
+    <div class="resTag">Soft • Clear • Not pushy</div>
+  </div>
+
+  <div class="resBody">
+    <div class="ctaSplit">
+
+      <!-- LEFT: CTA -->
+      <div class="ctaBox">
+        <div class="kicker">Next Step</div>
+        <h3>ทัก LINE แล้วบอก “ตอนนี้ใจหนักเรื่องอะไร”</h3>
+        <p class="small">
+          ฉันจะช่วยแนะนำบริการที่เหมาะที่สุด 1 อย่าง (ไม่ขาย ไม่ยัด)
+          เพื่อให้คุณเริ่มจากจุดที่ “กลับมาหายใจได้” ก่อน
+        </p>
+
+        <div class="ctaRow" style="margin-top:12px;">
+          <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">
+            ทัก LINE เพื่อเริ่ม
+          </a>
+          <a class="btn" href="index.html#contact">
+            ไปหน้าติดต่อ
+          </a>
+        </div>
+
+        <div class="microProof" style="margin-top:12px;">
+          หลังจบ 20 นาที หลายคนมักสังเกตว่า: “ใจเบาขึ้นเล็กน้อย” • “กลับมารู้ตัวได้เร็วขึ้น” • “หายใจลึกได้มากขึ้น”
+        </div>
+      </div>
+
+      <!-- RIGHT: FAQ -->
+      <div class="faqBox">
+        <div class="kicker">Mini FAQ</div>
+        <h3>คำถามสั้น ๆ ที่คนมักถาม</h3>
+
+        <details class="faqItem">
+          <summary>ถ้าฉันไม่แน่ใจว่าควรเริ่มจากอะไร?</summary>
+          <p>
+            เริ่มจากการทัก LINE แล้วบอก 2 อย่าง: (1) ตอนนี้ใจหนักเรื่องอะไร (2) เวลาที่มีต่อวัน
+            ฉันจะช่วยจัด “จุดเริ่มต้นที่พอดี” ให้แบบสั้นและชัดเจน
+          </p>
+        </details>
+
+        <details class="faqItem">
+          <summary>20 นาทีช่วยได้แค่ไหน?</summary>
+          <p>
+            เป้าหมายคือช่วยให้คุณ “กลับสู่ baseline ของระบบประสาท” ได้มากขึ้น
+            และมีพื้นที่ให้หัวใจได้หายใจ (ไม่ใช่การเคลมว่าทุกอย่างจะหายทันที)
+          </p>
+        </details>
+
+        <details class="faqItem">
+          <summary>Programs / Certification ต้องพร้อมแค่ไหนถึงจะเริ่มได้?</summary>
+          <p>
+            ไม่ต้อง “พร้อมทุกอย่าง” แต่ควรพร้อมสำหรับการฝึกแบบต่อเนื่องและเป็นลำดับ
+            ถ้าทัก LINE เราจะช่วยประเมินความเหมาะสมร่วมกันก่อนอย่างสุภาพและปลอดภัย
+          </p>
+        </details>
+
+        <div class="ctaRow" style="margin-top:12px;">
+          <a class="btn" href="certification.html">ดู Certification</a>
+          <a class="btn" href="service-20min.html">ดู 20 นาที</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- Sticky CTA (Mobile) -->
+<a class="stickyLineCta" href="https://lin.ee/qdp20di" target="_blank" rel="noopener" aria-label="ทัก LINE เพื่อเริ่ม">
+  <span class="dot"></span>
+  ทัก LINE เพื่อเริ่ม
+</a>
+  
 </main>
 
 <footer>
