--- a/about.html
+++ b/about.html
@@ -17,10 +17,11 @@
       <span>K R U N I K I</span>
     </div>
 
-   <!-- HAMBURGER (Mobile) -->
-<button class="burger" aria-label="เปิดเมนู" aria-expanded="false" aria-controls="mobileMenu">
-  <span></span><span></span><span></span>
-</button>
+ <!-- Mobile toggle -->
+    <button class="navToggle" type="button" aria-label="Open menu" aria-expanded="false">
+      ☰
+    </button>
+  </div>
 
 <!-- Desktop Nav -->
 <nav class="navDesk" aria-label="เมนูหลัก">
