--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 
   <body>
-      
+<body>
+
+<div id="site-header"></div>
+
+<main>
+  <!-- เนื้อหาหน้านี้ -->
+</main>
+
 <header>
   <div class="topbar">
     <div class="brand" aria-label="KRUNIKI">
@@ -285,5 +292,26 @@
     });
   })();
 </script>
+
+<script>
+  fetch("header.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("site-header").innerHTML = html;
+
+      // เปิด–ปิด Hamburger
+      const btn = document.querySelector('.navToggle');
+      const menu = document.getElementById('mobileMenu');
+
+      if (btn && menu) {
+        btn.addEventListener('click', () => {
+          const isOpen = btn.getAttribute('aria-expanded') === 'true';
+          btn.setAttribute('aria-expanded', String(!isOpen));
+          menu.hidden = isOpen;
+        });
+      }
+    });
+</script>
+  
 </body>
 </html>
