--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
   </div>
 
   <!-- Mobile drawer -->
-  <nav class="navDrawer" aria-label="Mobile">
+ <nav id="mobileMenu" class="navDrawer" aria-label="Mobile" hidden>
     <a href="about.html">เกี่ยวกับ</a>
     <a href="services.html">บริการ</a>
     <a href="resources.html">Resources</a>
